@@ -6258,9 +6258,11 @@ sub preferences {
     my $notebook = Gtk2::Notebook->new;
     $vbox->pack_start( $notebook, TRUE, TRUE, 0 );
 
-    my ( $vbox1, $frontends, $combob, $preentry, $cbc, $cbo,
-        $blacklist, $cbcsh, $cb_batch_flatbed, $sb_reload_limit )
-      = _preferences_scan_options();
+    my (
+        $vbox1,     $frontends, $combob,
+        $preentry,  $cbc,       $cbo,
+        $blacklist, $cbcsh,     $cb_batch_flatbed
+    ) = _preferences_scan_options();
     $notebook->append_page( $vbox1, __('Scan options') );
 
     my (
@@ -6318,7 +6320,6 @@ sub preferences {
             $SETTING{'restore window'}        = $cbw->get_active;
             $SETTING{set_timestamp}           = $cbt->get_active;
             $SETTING{'convert whitespace to underscores'} = $cbb->get_active;
-            $SETTING{'reload-recursion-limit'} = $sb_reload_limit->get_value;
 
             if ( defined $windows ) {
                 if (   $SETTING{frontend} eq 'libsane-perl'
@@ -6329,8 +6330,6 @@ sub preferences {
                 }
                 $windows->set( 'allow-batch-flatbed',
                     $SETTING{'allow-batch-flatbed'} );
-                $windows->set( 'reload-recursion-limit',
-                    $SETTING{'reload-recursion-limit'} );
             }
 
             my @tmpdirs = File::Spec->splitdir($session);
@@ -6461,22 +6460,6 @@ sub _preferences_scan_options {
     $cb_adf_all_pages->set_active( $SETTING{'adf-defaults-scan-all-pages'} );
     $vbox->pack_start( $cb_adf_all_pages, FALSE, FALSE, 0 );
 
-    # Reload recursion limit
-    $hbox = Gtk2::HBox->new;
-    $vbox->pack_start( $hbox, TRUE, TRUE, 0 );
-    $label = Gtk2::Label->new( __('Reload recursion limit') );
-    $hbox->pack_start( $label, FALSE, FALSE, 0 );
-    my $sb_reload_limit =
-      Gtk2::SpinButton->new_with_range( 2, $_100_PERCENT, 1 );
-    $sb_reload_limit->set_value( $SETTING{'reload-recursion-limit'} );
-    $tooltips->set_tip(
-        $sb_reload_limit,
-        __(
-'Prevent infinte loop by breaking out if more reload loops than this occur'
-        )
-    );
-    $hbox->add($sb_reload_limit);
-
     # scan command prefix
     my $hboxp = Gtk2::HBox->new;
     $vbox->pack_start( $hboxp, FALSE, FALSE, 0 );
@@ -6606,7 +6589,7 @@ sub _preferences_scan_options {
     );
     combobox_set_active( $combob, $SETTING{frontend}, @frontends );
     return $vbox, \@frontends, $combob, $preentry, $cbc, $cbo, $blacklist,
-      $cbcsh, $cb_batch_flatbed, $sb_reload_limit;
+      $cbcsh, $cb_batch_flatbed;
 }
 
 sub _preferences_general_options {
