@@ -5,6 +5,10 @@
   Thanks to Chris Mayo for the patch. Closes merge request #19
 * Fixed support for Poppler (pdftops) as postscript backend.
   Thanks to Chris Mayo for the patch. Closes merge request #18
+* - Reload recursion limit in Edit/Preferences
+  Set reload recursion limit as triangular number of number of scan options.
+  i.e. if there are 5 scan options, the recursion limit is 5+4+3+2+1=15
+  Closes bug #275 (reload recursion limit)
 
 
 1.8.6 (22.08.2017):
